<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/cat_probe">
        <EditTextPreference
            app:defaultValue=""
            app:key="probe_host"
            app:summary="@string/pref_probe_host_summary"
            app:title="@string/pref_probe_host" />
        <EditTextPreference
            app:defaultValue="53"
            app:key="probe_port"
            app:summary="@string/pref_probe_port_summary"
            app:title="@string/pref_probe_port" />
        <EditTextPreference
            app:defaultValue="20"
            app:key="check_interval_sec"
            app:title="@string/pref_interval" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_escalation">
        <EditTextPreference
            app:defaultValue="60"
            app:key="t_reassociate_sec"
            app:title="@string/pref_t_reassociate" />
        <EditTextPreference
            app:defaultValue="120"
            app:key="t_soft_sec"
            app:title="@string/pref_t_soft" />
        <EditTextPreference
            app:defaultValue="240"
            app:key="t_hard_sec"
            app:title="@string/pref_t_hard" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="hard_reset_enabled"
            app:summary="@string/pref_hard_enabled_summary"
            app:title="@string/pref_hard_enabled" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_airplane">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="airplane_enabled"
            app:summary="@string/pref_airplane_enabled_summary"
            app:title="@string/pref_airplane_enabled" />
        <EditTextPreference
            app:defaultValue="360"
            app:key="t_airplane_sec"
            app:summary="@string/pref_t_airplane_summary"
            app:title="@string/pref_t_airplane" />
        <EditTextPreference
            app:defaultValue="15"
            app:key="airplane_dwell_sec"
            app:summary="@string/pref_airplane_dwell_summary"
            app:title="@string/pref_airplane_dwell" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_reporting">
        <EditTextPreference
            app:defaultValue="https://ntfy.sh"
            app:key="ntfy_url"
            app:summary="@string/pref_ntfy_url_summary"
            app:title="@string/pref_ntfy_url" />
        <EditTextPreference
            app:key="ntfy_topic"
            app:summary="@string/pref_ntfy_topic_summary"
            app:title="@string/pref_ntfy_topic" />
        <EditTextPreference
            app:key="ntfy_user"
            app:summary="@string/pref_ntfy_user_summary"
            app:title="@string/pref_ntfy_user" />
        <EditTextPreference
            app:key="ntfy_password"
            app:summary="@string/pref_ntfy_password_summary"
            app:title="@string/pref_ntfy_password" />
        <Preference
            app:key="ntfy_test"
            app:summary="@string/pref_ntfy_test_summary"
            app:title="@string/pref_ntfy_test" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_heartbeat">
        <EditTextPreference
            app:key="heartbeat_url"
            app:summary="@string/pref_heartbeat_url_summary"
            app:title="@string/pref_heartbeat_url" />
        <EditTextPreference
            app:defaultValue="300"
            app:key="heartbeat_interval_sec"
            app:summary="@string/pref_heartbeat_interval_summary"
            app:title="@string/pref_heartbeat_interval" />
        <Preference
            app:key="heartbeat_test"
            app:summary="@string/pref_heartbeat_test_summary"
            app:title="@string/pref_heartbeat_test" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
